# KF_DA

./: .dockerignore  CLAUDE.md  CONTEXT.md  DA_exp_ctrl.py  DA_results_plots.py  Dockerfile  KSE_adj_error.py  U_0_guess_fourier.npy  adj_noise_amp.py  adj_precision_stud.py  create_results_dir.py  diss_plots.py  figs.py  linear_adj_prec.py  ly_exps.py  particle_dist.py  particle_entropy.py  pyproject.toml  solver_diag_plots.py  test.py  test_gpu.py  test_jax_cfd.py  test_vp.py  trj_generator.py
.github/workflows/: publish-ghcr.yaml
SRC/: KS_Integrators.py  function_perf_bench.py  iterative_methods.py  plotting_utils.py  utils.py
SRC/DA_Comp/: DA_engine.py  adjoint.py  case_post_proc.py  configs.py  loss_funcs.py  optimization.py
SRC/DA_Comp/optimization/: LS_TR.py  Quasi_Newton.py  optax_logic.py  optimization.py  parent_classes.py
SRC/Solver/: IC_gen.py  KF_intergrators.py  ploting.py  solver.py  trj_animation.py
SRC/Vel_init/: AI.py  CS_init.py  IC_init.py
SRC/global_post/: global_post_main.py
SRC/parameterization/: Fourier_Param.py
SRC/vp_floats/: bu  bu.cpp  python_test.py  vp_py_utils.py  vpfloat copy.cpp  vpfloat.cpp
SRC/vp_floats/vpfloat.egg-info/: SOURCES.txt
diag_scripts/: DA_results_plots.py  adj_precision_stud.py  create_results_dir.py  diss_plots.py  ly_exps.py  particle_entropy.py  particle_noise_sens.py  solver_diag_plots.py
main_scripts/: DA_exp_ctrl.py  trj_generator.py
src/kf_da/: __init__.py
src/kf_da/daComp/: DA_engine.py  __init__.py  adjoint.py  case_post_proc.py  (+2 more)
wheels/: vpfloat-0.1.0-cp314-cp314-linux_x86_64.whl
(+27 files in other folders)
